feat: Disable sources and destinations (#464)
* wip: pause/resume Disabled parameter

* Update tests with refactored ResourceConfiguration

* Add test for rendering a disabled destination

* Add test for rendering a disabled source

* Add test for configuration.Type()

* Add filelog test sourcetype for clearer test. (#466)

Added a second sourcetype for clearer disabled test

* Use valid config name in tests
