# docs/swagger/swagger.yaml
@@ -415,6 +415,8 @@ definitions:
     type: object
   model.ParameterizedSpec:
     properties:
+      disabled:
+        type: boolean
       parameters:
         items:
           $ref: '#/definitions/model.Parameter'
@@ -497,6 +499,8 @@ definitions:
     type: object
   model.ResourceConfiguration:
     properties:
+      disabled:
+        type: boolean
       name:
         type: string
       parameters:
